[gd_scene load_steps=21 format=3 uid="uid://d17k0bqafnn6k"]

[ext_resource type="Script" path="res://Level_4/node_2d.gd" id="1_p0cus"]
[ext_resource type="Texture2D" uid="uid://bve81kxgs5s4f" path="res://assets/fondo_tirana02.jpg" id="1_v3lqp"]
[ext_resource type="Texture2D" uid="uid://bcfbgcta68uf6" path="res://assets/dance_left.png" id="2_lwtps"]
[ext_resource type="PackedScene" uid="uid://ybvgj21mfde6" path="res://ending/end.tscn" id="2_ofqh0"]
[ext_resource type="Texture2D" uid="uid://bl3pjpf6hdpyu" path="res://assets/dance_right.png" id="3_aqpwy"]
[ext_resource type="Texture2D" uid="uid://dvb3g3bxt6gxk" path="res://assets/bullseye_square.png" id="4_oawxf"]
[ext_resource type="Texture2D" uid="uid://djf5lxhu5bre4" path="res://assets/target_square.png" id="5_jlsb4"]
[ext_resource type="Script" path="res://Level_4/character_body_2d.gd" id="5_xnqte"]
[ext_resource type="Texture2D" uid="uid://blnqm53cf480" path="res://assets/espacio.png" id="9_dtkkn"]
[ext_resource type="Texture2D" uid="uid://brlvh8v2dvf86" path="res://assets/espacio2.png" id="10_qqurj"]
[ext_resource type="Texture2D" uid="uid://c7cnw52l17r6p" path="res://assets/timer_placeholder.png" id="11_5hd1d"]

[sub_resource type="SpriteFrames" id="SpriteFrames_7xll4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_lwtps")
}, {
"duration": 1.0,
"texture": ExtResource("3_aqpwy")
}],
"loop": true,
"name": &"dance",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yqfev"]
size = Vector2(129.231, 43)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_xm2cx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5dmj6"]
size = Vector2(53.5, 110)

[sub_resource type="Animation" id="Animation_kqetc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_3sq21"]
resource_name = "transition"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.53333, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_smykq"]
_data = {
"RESET": SubResource("Animation_kqetc"),
"transition": SubResource("Animation_3sq21")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_x0abx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_dtkkn")
}, {
"duration": 1.0,
"texture": ExtResource("10_qqurj")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="Theme" id="Theme_gf7nn"]
default_font_size = 30

[node name="Dance" type="Node2D"]
modulate = Color(0, 0, 0, 1)
script = ExtResource("1_p0cus")
next_scene = ExtResource("2_ofqh0")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(-12, -20)
scale = Vector2(0.543874, 0.444812)
texture = ExtResource("1_v3lqp")
centered = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -100

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(325, 275)
scale = Vector2(2.284, 1.75532)
sprite_frames = SubResource("SpriteFrames_7xll4")
animation = &"dance"
autoplay = "dance"

[node name="Bullseye" type="Area2D" parent="."]
position = Vector2(320, 40)

[node name="Sprite2D" type="Sprite2D" parent="Bullseye"]
rotation = 0.785398
texture = ExtResource("4_oawxf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bullseye"]
scale = Vector2(0.325, 1)
shape = SubResource("RectangleShape2D_yqfev")

[node name="Target" type="CharacterBody2D" parent="."]
material = SubResource("CanvasItemMaterial_xm2cx")
position = Vector2(858, 44)
script = ExtResource("5_xnqte")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Target"]
scale = Vector2(0.325, 1)
shape = SubResource("RectangleShape2D_yqfev")

[node name="Sprite2D" type="Sprite2D" parent="Target"]
rotation = 0.785398
texture = ExtResource("5_jlsb4")

[node name="Target2" type="CharacterBody2D" parent="."]
material = SubResource("CanvasItemMaterial_xm2cx")
position = Vector2(1281, 44)
script = ExtResource("5_xnqte")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Target2"]
scale = Vector2(0.325, 1)
shape = SubResource("RectangleShape2D_yqfev")

[node name="Sprite2D" type="Sprite2D" parent="Target2"]
rotation = 0.785398
texture = ExtResource("5_jlsb4")

[node name="Target3" type="CharacterBody2D" parent="."]
material = SubResource("CanvasItemMaterial_xm2cx")
position = Vector2(1204, 43)
script = ExtResource("5_xnqte")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Target3"]
scale = Vector2(0.325, 1)
shape = SubResource("RectangleShape2D_yqfev")

[node name="Sprite2D" type="Sprite2D" parent="Target3"]
rotation = 0.785398
texture = ExtResource("5_jlsb4")

[node name="Target4" type="CharacterBody2D" parent="."]
material = SubResource("CanvasItemMaterial_xm2cx")
position = Vector2(982, 44)
script = ExtResource("5_xnqte")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Target4"]
scale = Vector2(0.325, 1)
shape = SubResource("RectangleShape2D_yqfev")

[node name="Sprite2D" type="Sprite2D" parent="Target4"]
rotation = 0.785398
texture = ExtResource("5_jlsb4")

[node name="Target5" type="CharacterBody2D" parent="."]
material = SubResource("CanvasItemMaterial_xm2cx")
position = Vector2(1127, 45)
script = ExtResource("5_xnqte")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Target5"]
scale = Vector2(0.325, 1)
shape = SubResource("RectangleShape2D_yqfev")

[node name="Sprite2D" type="Sprite2D" parent="Target5"]
rotation = 0.785398
texture = ExtResource("5_jlsb4")

[node name="TargetStopper" type="Area2D" parent="."]
position = Vector2(-30, 40)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetStopper"]
position = Vector2(0, 10)
shape = SubResource("RectangleShape2D_5dmj6")

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[node name="ResultLabel" type="Label" parent="."]
visible = false
offset_left = 303.0
offset_top = 104.0
offset_right = 343.0
offset_bottom = 173.0
theme_override_font_sizes/font_size = 50

[node name="TimeLabel" type="Label" parent="."]
visible = false
offset_left = 392.0
offset_right = 432.0
offset_bottom = 23.0

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -246.0
offset_top = -107.0
offset_right = 246.0
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.00186)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Â¡BAILA POR TU VIDA!"

[node name="Espacio" type="Sprite2D" parent="CanvasLayer2"]
position = Vector2(308, 249)
scale = Vector2(0.63253, 0.63253)
texture = ExtResource("9_dtkkn")

[node name="TransitionTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_smykq")
}
autoplay = "transition"

[node name="MechanicSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(544, 306)
scale = Vector2(0.311245, 0.311245)
sprite_frames = SubResource("SpriteFrames_x0abx")
autoplay = "default"

[node name="TimerContainer" type="MarginContainer" parent="."]
offset_left = 42.0
offset_top = 237.0
offset_right = 82.0
offset_bottom = 280.0
scale = Vector2(2.28, 2.12)

[node name="RichTextLabel" type="RichTextLabel" parent="TimerContainer"]
layout_mode = 2
theme = SubResource("Theme_gf7nn")
text = "6"

[node name="Sprite2D" type="Sprite2D" parent="TimerContainer"]
show_behind_parent = true
position = Vector2(10.0877, 21.6981)
rotation = 0.785398
scale = Vector2(0.7, 0.7)
skew = 0.0296706
texture = ExtResource("11_5hd1d")

[connection signal="body_entered" from="Bullseye" to="." method="_on_bullseye_body_entered"]
[connection signal="body_exited" from="Bullseye" to="." method="_on_bullseye_body_exited"]
[connection signal="area_entered" from="TargetStopper" to="TargetStopper" method="_on_area_entered"]
[connection signal="body_entered" from="TargetStopper" to="Target" method="_on_target_destroyer_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TransitionTimer" to="." method="_on_transition_timer_timeout"]
